--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
 	  <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	  <title>Home</title>
 </head>
 
@@ -23,7 +24,7 @@
 				<li class="active"><a href = "about.html">About Me</a></li>
 				<li><a href = "thirdpage.html">Favorites</a></li>
 				<li class="images"><a href="https://www.pinterest.com/nateb2/"><img src="images/pinterest-logo.png" width = 20px height = 20px alt="pinterest logo"></a></li>
-        <li class="images"><a href="www.linkedin.com/in/nateben"><img src="images/linkedin.png" width = 20px height = 20px alt="linked in logo"></a></li>
+        <li class="images"><a href="https://www.linkedin.com/in/nateben"><img src="images/linkedin.png" width = 20px height = 20px alt="linked in logo"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -39,8 +40,10 @@
 
       <h2>Fast Facts</h2>
 
+      <h3> Fast facts about me!</h3>
+
     <div class="fast-facts">
-      <h4>UX Design + CS @ UMich (2025)</h4>
+      <h4>Pronouns: He/Him</h4>
       <h4>Incoming UX Research Intern @ Figma</h4>
       <h4>Former UX Research Intern @ Autodesk</h4>
       <h4>Myers Briggs Personality: INFJ-T</h4>
@@ -115,17 +118,17 @@
           </div>
           <div id="right-footer">             
             <div id="work-footer">
-              <a href="#design-projects" id="foot-text">Work</h3></a>
+              <a href="#design-projects" class="foot-text">Work</h3></a>
               <div id="list-footer">
-                <a href=""><p id="foot-pro">Autodesk</p></a>
-                <a href=""><p id="foot-pro">iGYM</p></a>
-                <a href=""><p id="foot-pro">KTPalooza</p></a>
-                <a href=""><p id="foot-pro">Misc. Design Work</p></a>
+                <a href="comingsoon.html"><p class="foot-pro">Autodesk</p></a>
+                <a href="comingsoon.html"><p class="foot-pro">iGYM</p></a>
+                <a href="comingsoon.html"><p class="foot-pro">KTPalooza</p></a>
+                <a href="comingsoon.html"><p class="foot-pro">Misc. Design Work</p></a>
               </div>
             </div>
-            <a href="about.html" id="foot-text">About</h3></a>
-            <a href="thirdpage.html" id="foot-text">Favorites</h3></a>
-            <a target="_blank" href="" id="foot-text" id="foot-text">Resume</h3></a>
+            <a href="about.html" class="foot-text">About</h3></a>
+            <a href="thirdpage.html" class="foot-text">Favorites</h3></a>
+            <a target="_blank" href="https://drive.google.com/file/d/1D1T4VJPEAlK_6CrZI3zOLkh-ES611rqq/view?usp=sharing" class="foot-text">Resume</h3></a>
           </div>
         </div>
 </footer>
