--- a/comingsoon.html
+++ b/comingsoon.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
 	  <link rel="stylesheet" href="css/style.css">
+      <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	  <title>Home</title>
 </head>
 
@@ -23,7 +24,7 @@
 				<li><a href = "about.html">About Me</a></li>
 				<li><a href = "thirdpage.html">Favorites</a></li>
 				<li class="images"><a href="https://www.pinterest.com/nateb2/"><img src="images/pinterest-logo.png" width = 20px height = 20px alt="pinterest logo"></a></li>
-        <li class="images"><a href="www.linkedin.com/in/nateben"><img src="images/linkedin.png" width = 20px height = 20px alt="linked in logo"></a></li>
+        <li class="images"><a href="https://www.linkedin.com/in/nateben"><img src="images/linkedin.png" width = 20px height = 20px alt="linked in logo"></a></li>
 			</ul>
 		</nav>
 	</header>
