--- a/thirdpage.html
+++ b/thirdpage.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
 	  <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 	  <title>Home</title>
 </head>
 
 <body>
 
+  <main>
   <navigation class="navigation" id="navigation">
     <header>
         <!-- change this image to logo
@@ -23,7 +26,7 @@
 				<li><a href = "about.html">About Me</a></li>
 				<li class="active"><a href = "thirdpage.html">Favorites</a></li>
 				<li class="images"><a href="https://www.pinterest.com/nateb2/"><img src="images/pinterest-logo.png" width = 20px height = 20px alt="pinterest logo"></a></li>
-        <li class="images"><a href="www.linkedin.com/in/nateben"><img src="images/linkedin.png" width = 20px height = 20px alt="linked in logo"></a></li>
+        <li class="images"><a href="https://www.linkedin.com/in/nateben"><img src="images/linkedin.png" width = 20px height = 20px alt="linked in logo"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -76,7 +79,7 @@
     </ul>
   </div>
 -->
-
+</main>
 </body>
 
 <footer>
@@ -91,17 +94,17 @@
           </div>
           <div id="right-footer">             
             <div id="work-footer">
-              <a href="#design-projects" id="foot-text">Work</h3></a>
+              <a href="#design-projects" class="foot-text">Work</h3></a>
               <div id="list-footer">
-                <a href=""><p id="foot-pro">Autodesk</p></a>
-                <a href=""><p id="foot-pro">iGYM</p></a>
-                <a href=""><p id="foot-pro">KTPalooza</p></a>
-                <a href=""><p id="foot-pro">Misc. Design Work</p></a>
+                <a href="comingsoon.html"><p class="foot-pro">Autodesk</p></a>
+                <a href="comingsoon.html"><p class="foot-pro">iGYM</p></a>
+                <a href="comingsoon.html"><p class="foot-pro">KTPalooza</p></a>
+                <a href="comingsoon.html"><p class="foot-pro">Misc. Design Work</p></a>
               </div>
             </div>
-            <a href="about.html" id="foot-text">About</h3></a>
-            <a href="thirdpage.html" id="foot-text">Favorites</h3></a>
-            <a target="_blank" href="" id="foot-text" id="foot-text">Resume</h3></a>
+            <a href="about.html" class="foot-text">About</h3></a>
+            <a href="thirdpage.html" class="foot-text">Favorites</h3></a>
+            <a target="_blank" href="https://drive.google.com/file/d/1D1T4VJPEAlK_6CrZI3zOLkh-ES611rqq/view?usp=sharing" class="foot-text">Resume</h3></a>
           </div>
         </div>
 </footer>
