--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
 	  <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	  <title>Home</title>
 
 </head>
@@ -37,13 +38,14 @@
 				<li><a href = "about.html">About Me</a></li>
 				<li><a href = "thirdpage.html">Favorites</a></li>
 				<li class="images"><a href="https://www.pinterest.com/nateb2/"><img src="images/pinterest-logo.png" width = 20px height = 20px alt="pinterest logo"></a></li>
-        <li class="images"><a href="www.linkedin.com/in/nateben"><img src="images/linkedin.png" width = 20px height = 20px alt="linked in logo"></a></li>
+        <li class="images"><a href="https://www.linkedin.com/in/nateben"><img src="images/linkedin.png" width = 20px height = 20px alt="linked in logo"></a></li>
 			</ul>
 		</nav>
 	</header>
     </navigation>
 
-    <main class="intro" id="intro">
+    <main>
+    <div class="intro" id="intro">
 
     <div class="heading1"> 
     <h1 id="javascript_element"> I'm Nate Bennett</h1>	
@@ -63,7 +65,8 @@
     
     <img src="images/MAIN-PHOTO.jpg" alt="photo of Nate Bennett Smiling" id = "Main-Photo">
 
-    </main>
+  </div>
+    
 
     <div class="photo-divider">
       <img src="images/totoro-gif.gif" alt="GIF of Totoro character blinking" id = "Totoro-Gif">
@@ -84,7 +87,7 @@
       <h3>Autodesk</h3>
       <h4>UX Research • Internship</h4>
       <p>Researching and visualizing employee experiences at Autodesk.</p>
-      <button><a href="comingsoon.html">See More</a></button>
+      <button><a href="comingsoon.html">View Case Study</a></button>
     </div>
 
     <div class="autodesk-img">
@@ -95,7 +98,7 @@
       <h3>iGYM</h3>
       <h4>UX • AR/VR • Accessibility</h4>
       <p>Developing inclusive Augmented Reality games.</p>
-      <button><a href="comingsoon.html">See More</a></button>
+      <button><a href="comingsoon.html">View Case Study</a></button>
     </div>
 
     <div class="igym-img">
@@ -107,7 +110,7 @@
       <h3>KTP Rush App</h3>
       <h4>UX Design • Student Org</h4>
       <p>Designing full-stack Mobile Application for Rush.</p>
-      <button><a href="comingsoon.html">See More</a></button>
+      <button><a href="comingsoon.html">View Case Study</a></button>
     </div>
 
     <div class="ktp-img">
@@ -119,7 +122,7 @@
       <h3>Miscellaneous Design Work</h3>
       <h4>UX Design • Graphic Design</h4>
       <p>Random design projects throughout the years.</p>
-      <button><a href="comingsoon.html">See More</a></button>
+      <button><a href="comingsoon.html">View Case Study</a></button>
     </div>
 
     <div class = "misc-img">
@@ -127,7 +130,7 @@
     </div>
 
     </div>
-
+  </main>
 
 </body>
 
@@ -143,17 +146,17 @@
             </div>
             <div id="right-footer">             
               <div id="work-footer">
-                <a href="#design-projects" id="foot-text">Work</h3></a>
+                <a href="#design-projects" class="foot-text">Work</h3></a>
                 <div id="list-footer">
-                  <a href=""><p id="foot-pro">Autodesk</p></a>
-                  <a href=""><p id="foot-pro">iGYM</p></a>
-                  <a href=""><p id="foot-pro">KTP Rush App</p></a>
-                  <a href=""><p id="foot-pro">Misc. Design Work</p></a>
+                  <a href="comingsoon.html"><p class="foot-pro">Autodesk</p></a>
+                  <a href="comingsoon.html"><p class="foot-pro">iGYM</p></a>
+                  <a href="comingsoon.html"><p class="foot-pro">KTP Rush App</p></a>
+                  <a href="comingsoon.html"><p class="foot-pro">Misc. Design Work</p></a>
                 </div>
               </div>
-              <a href="about.html" id="foot-text">About</h3></a>
-              <a href="thirdpage.html" id="foot-text">Favorites</h3></a>
-              <a target="_blank" href="" id="foot-text" id="foot-text">Resume</h3></a>
+              <a href="about.html" class="foot-text">About</h3></a>
+              <a href="thirdpage.html" class="foot-text">Favorites</h3></a>
+              <a target="_blank" href="https://drive.google.com/file/d/1D1T4VJPEAlK_6CrZI3zOLkh-ES611rqq/view?usp=sharing" class="foot-text">Resume</h3></a>
             </div>
           </div>
   </footer>
